# markovchain-api

./: .gitignore  Cargo.toml  README.md
config/: settings.toml
migrations/20251119103655_create_chain_entries/: down.sql  up.sql
migrations/20251119104129_create_texts/: up.sql
migrations/20251121150830_add_chain_entries_from_index/: down.sql  up.sql
migrations/20251121151300_add_added_on_column_texts/: down.sql  up.sql
migrations/20251127185415_generated_normalized_from_column/: down.sql  up.sql
src/: client_ip.rs  generator.rs  input.rs  main.rs  migrations.rs  request_logging.rs  server.rs  settings.rs
