[package]
name = "markovchain-api_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rand = "0.10.0-rc.5"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.15"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
futures = "0.3.31"
config = "0.15.19"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
rand_distr = "0.6.0-rc.0"
